ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend: 
    service:
      name: frontend-svc
      port:
        number: 80
  rules:
    - host: "a7e574afc0f7f4c9ba6fc42535571dd8-ad5aae9a308643c5.elb.ap-south-1.amazonaws.com/10.100.207.250/student/"
